modified Procfile and pom.xml and system.properties